[metadata]
name = CubeRaspberryLib3
version = 0.1.6
author = RikoNaka
author_email = xxy1836@gmail.com
description = CubeRaspberryLib driver adapted to Python3 version
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rikonaka/CubeRaspberryLib3
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = raspberry, pi, driver

[project]
license = "MIT"

[options]
packages = find:
python_requires = >=3.6
install_requires =
    smbus2>=0.5.0
    pillow>=11.3.0
    Adafruit_SSD1306>=1.6.2

[options.package_data]
* = *.txt, *.md